Kipi-plugins 4.3.0 - Release date: 2014/09/07
------------------------------------------------------------------------

NEW FEATURES:

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 