@@ -6,8 +6,8 @@
  * Date        : 2009-11-13
  * Description : a plugin to blend bracketed images.
  *
- * Copyright (C) 2009-2012 by Gilles Caulier <caulier dot gilles at gmail dot com>
- * Copyright (C) 2012 by Benjamin Girault <benjamin dot girault at gmail dot com>
+ * Copyright (C) 2009-2014 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2012      by Benjamin Girault <benjamin dot girault at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -43,11 +43,11 @@
 namespace KIPIExpoBlendingPlugin
 {
 
-class LastPage::LastPagePriv
+class LastPage::Private
 {
 public:
 
-    LastPagePriv()
+    Private()
     {
         mngr = 0;
     }
@@ -57,11 +57,11 @@ public:
 
 LastPage::LastPage(Manager* const mngr, KAssistantDialog* const dlg)
         : KPWizardPage(dlg, i18n("Pre-Processing is Complete")),
-          d(new LastPagePriv)
+          d(new Private)
 {
-    d->mngr       = mngr;
-    KVBox* vbox   = new KVBox(this);
-    QLabel* title = new QLabel(vbox);
+    d->mngr             = mngr;
+    KVBox* const vbox   = new KVBox(this);
+    QLabel* const title = new QLabel(vbox);
     title->setOpenExternalLinks(true);
     title->setWordWrap(true);
     title->setText(i18n("<qt>"
@@ -74,6 +74,9 @@ LastPage::LastPage(Manager* const mngr, KAssistantDialog* const dlg)
                         "</qt>",
                         QDir::toNativeSeparators(d->mngr->enfuseBinary().path()),
                         d->mngr->enfuseBinary().url().url()));
+
+    QLabel* const space = new QLabel(vbox);
+    vbox->setStretchFactor(space, 10);
 
     setPageWidget(vbox);
 
