@@ -6,7 +6,7 @@
  * Date        : 2009-11-13
  * Description : a plugin to blend bracketed images.
  *
- * Copyright (C) 2009-2012 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2009-2014 by Gilles Caulier <caulier dot gilles at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -43,8 +43,8 @@ public:
 
 private:
 
-    class LastPagePriv;
-    LastPagePriv* const d;
+    class Private;
+    Private* const d;
 };
 
 }   // namespace KIPIExpoBlendingPlugin
