@@ -6,9 +6,9 @@
  * Date        : 2009-11-13
  * Description : a plugin to blend bracketed images.
  *
- * Copyright (C) 2009-2012 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2009-2014 by Gilles Caulier <caulier dot gilles at gmail dot com>
  * Copyright (C) 2009-2011 by Johannes Wienke <languitar at semipol dot de>
- * Copyright (C) 2012 by Benjamin Girault <benjamin dot girault at gmail dot com>
+ * Copyright (C) 2012      by Benjamin Girault <benjamin dot girault at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -88,7 +88,8 @@ private:
 
     void    run();
 
-    bool    startPreProcessing(const KUrl::List& inUrls, ItemUrlsMap& preProcessedUrlsMap,
+    void    preProcessingMultithreaded(const KUrl& url, volatile bool& error, const RawDecodingSettings& settings);
+    bool    startPreProcessing(const KUrl::List& inUrls,
                                bool  align, const RawDecodingSettings& settings,
                                const QString& alignPath, QString& errors);
     bool    computePreview(const KUrl& inUrl, KUrl& outUrl);
@@ -105,8 +106,8 @@ private:
 
 private:
 
-    class ActionThreadPriv;
-    ActionThreadPriv* const d;
+    class Private;
+    Private* const d;
 };
 
 }  // namespace KIPIExpoBlendingPlugin
